--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -319,7 +319,7 @@
             <div id="apercu" class="container limit-container">
                 <div class="w-layout-grid trip-grid-iten">
                     <div class="trip-details-block">
-                        <h2 class="h3 trip-h3 mobile-bottom-padding">Casablanca</h2>
+                        <h2 class="h3 trip-h3 mobile-bottom-padding">Service de Taxi à Casablanca</h2>
                         <div class="trip-info-block">
                             <div class="trip-info-text">Emplacement</div>
                             <div class="trip-info-text caps">Sur la côte atlantique du Maroc</div>
@@ -330,7 +330,7 @@
                         </div>
                         <div class="trip-info-block">
                             <div class="trip-info-text">Spécialité</div>
-                            <div class="trip-info-text caps">Réservations simples pour taxis</div>
+                            <div class="trip-info-text caps">Réservation facile pour taxis</div>
                         </div>
                         <div class="trip-info-block">
                             <div class="trip-info-text">Population</div>
@@ -339,13 +339,13 @@
                     </div>
                     <div class="trip-highlights-block show-up">
                         <div class="word-mask">
-                            <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Ville de Casablanca et ses Taxis</h2>
+                            <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Réservez un Taxi à Casablanca</h2>
                         </div>
                         <div class="rich-text-wrapper">
                             <div class="destinations-rich-text w-richtext">
-                                <p>Casablanca, le cœur économique du Maroc, est réputée pour sa modernité et ses services de transport de qualité, y compris les taxis.</p>
+                                <p>Casablanca, le cœur économique du Maroc, offre un service de taxi fiable et pratique pour les déplacements urbains et <strong>transferts aéroport</strong>.</p>
                                 <p>‍</p>
-                                <p><strong>Réservez un taxi Casablanca</strong> pour un trajet confortable vers <strong>l'aéroport</strong> ou d'autres destinations populaires. Profitez de la combinaison parfaite entre efficacité moderne et accueil traditionnel marocain.</p>
+                                <p>Optez pour un <strong>service de taxi à Casablanca</strong> et profitez d'une <strong>réservation facile</strong> pour voyager confortablement vers l'aéroport ou d'autres destinations populaires.</p>
                             </div>
                         </div>
                     </div>
@@ -356,9 +356,9 @@
             <div class="container limit-container">
                 <div class="w-layout-grid activities-grid">
                     <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
-                        <h2 class="h3 trip-h3">Activités et Transports</h2>
+                        <h2 class="h3 trip-h3">Activités et Transports à Casablanca</h2>
                         <p class="paragraph activities">
-                            Explorez les quartiers emblématiques de Casablanca grâce à un taxi réservé en quelques clics. Découvrez la mosquée Hassan II et profitez des plages en toute sérénité.
+                            Explorez les sites emblématiques de Casablanca grâce à notre <strong>service de taxi</strong>. Réservez facilement pour visiter la mosquée Hassan II ou profitez des plages locales en toute sérénité.
                         </p>
                     </div>
                     <div class="w-dyn-list">
