--- a/public/agadir.html
+++ b/public/agadir.html
@@ -9,15 +9,12 @@
   })(window,document,'script','dataLayer','GTM-ND4CTK2S');</script>
   <!-- End Google Tag Manager -->
       <meta charset="utf-8">
-      <title>Taxi Marrakech Agadir</title>
+      <title>Agadir Taxi – Réservation Facile et Transferts Confortables</title>
       <meta content="width=device-width,initial-scale=1" name="viewport">
-      <meta content="Agadir | taxistomarrakech" property="og:title">
+      <meta content="Agadir Taxi – Réservation Facile et Transferts Confortables" property="og:title">
       <meta content="/images/menulogo.webp" property="og:image">
-      <meta content="Agadir | taxistomarrakech" property="twitter:title">
-      <meta name="description" lang="en" content="Book a reliable taxi service for hassle-free transfers between Marrakech and Essaouira. Our experienced drivers offer convenient transportation options, including Essaouira-Marrakech taxi services, transfers from Essaouira to Marrakech, and efficient taxis to and from Essaouira Airport. Discover the beauty of Morocco with our day trips from Marrakech to Essaouira. Whether you need a taxi from Casablanca Airport, want to explore Marrakech with a taxi, or plan a transfer from Marrakech to Essaouira, we've got you covered. Explore the best taxi options in Morocco with us!">
-      <meta name="description" lang="fr" content="Réservez un service de taxi fiable pour des transferts sans tracas entre Marrakech et Essaouira. Nos chauffeurs expérimentés offrent des options de transport pratiques, y compris des services de taxi Essaouira-Marrakech, des transferts d'Essaouira à Marrakech, et des taxis efficaces vers et depuis l'aéroport d'Essaouira. Découvrez la beauté du Maroc avec nos excursions d'une journée de Marrakech à Essaouira. Que vous ayez besoin d'un taxi depuis l'aéroport de Casablanca, que vous souhaitiez explorer Marrakech avec un taxi, ou planifier un transfert de Marrakech à Essaouira, nous avons tout ce qu'il vous faut. Explorez les meilleures options de taxi au Maroc avec nous !">
-      <meta name="description" lang="de" content="Buchen Sie einen zuverlässigen Taxiservice für problemlose Transfers zwischen Marrakesch und Essaouira. Unsere erfahrenen Fahrer bieten bequeme Transportmöglichkeiten, darunter Taxidienste von Essaouira nach Marrakesch, Transfers von Essaouira nach Marrakesch und effiziente Taxis zum und vom Flughafen Essaouira. Entdecken Sie die Schönheit Marokkos mit unseren Tagesausflügen von Marrakesch nach Essaouira. Ganz gleich, ob Sie ein Taxi vom Flughafen Casablanca benötigen, Marrakesch mit einem Taxi erkunden möchten oder einen Transfer von Marrakesch nach Essaouira planen, wir haben das Richtige für Sie. Entdecken Sie mit uns die besten Taximöglichkeiten in Marokko!">
-      <meta name="description" lang="es" content="Reserve un servicio de taxi fiable para traslados sin complicaciones entre Marrakech y Essaouira. Nuestros experimentados conductores ofrecen cómodas opciones de transporte, incluidos servicios de taxi Essaouira-Marrakech, traslados de Essaouira a Marrakech y taxis eficientes desde y hacia el aeropuerto de Essaouira. Descubra la belleza de Marruecos con nuestras excursiones de un día desde Marrakech a Essaouira. Si necesita un taxi desde el Aeropuerto de Casablanca, quiere explorar Marrakech con un taxi, o planear un traslado desde Marrakech a Essaouira, le tenemos cubierto. ¡Explore las mejores opciones de taxi en Marruecos con nosotros!">
+      <meta content="Agadir Taxi – Réservation Facile et Transferts Confortables" property="twitter:title">
+      <meta name="description" lang="fr" content="Réservez un taxi à Agadir pour des transferts confortables vers l'aéroport et les destinations populaires. Profitez d'un service rapide et fiable avec chauffeurs expérimentés.">
       <meta content="/images/menulogo.webp" property="twitter:image">
       <link href="/css/style.css" rel="stylesheet" type="text/css">
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document)</script>
@@ -274,7 +271,7 @@
             <div class="dark-gradient less-dark"></div>
             <header style="opacity:0" class="container destinations-atf limit-container mobile-no-padding">
                <div class="destination-block">
-                  <h1 class="h1 light fade-up tricks">Agadir</h1>
+                  <h1 class="h1 light fade-up tricks">Réservez un Taxi à Agadir pour Vos Transferts en Toute Confiance</h1>
                   <div class="destination-info-block">
                      <div class="info-block margin-right">
                         <div class="info-title">Destination</div>
@@ -312,9 +309,9 @@
             <div id="apercu" class="container limit-container">
                <div class="w-layout-grid trip-grid-iten">
                   <div class="trip-details-block">
-                     <h2 class="h3 trip-h3 mobile-bottom-padding">Ville d'essaouira</h2>
+                     <h1 class="h3 trip-h3 mobile-bottom-padding">Agadir Taxi - Réservation Taxi Agadir</h1>
                      <div class="trip-info-block">
-                        <div class="trip-info-text">Site</div>
+                        <div class="trip-info-text">Localisation</div>
                         <div class="trip-info-text caps">Sur la côte atlantique du Maroc</div>
                      </div>
                      <div class="trip-info-block">
@@ -322,19 +319,18 @@
                         <div class="trip-info-text caps">Fondée au début du XVIe siècle</div>
                      </div>
                      <div class="trip-info-block">
-                        <div class="trip-info-text">Nombre d'habitants</div>
+                        <div class="trip-info-text">Population</div>
                         <div class="trip-info-text caps">421 844 habitants</div>
                      </div>
                   </div>
                   <div class="trip-highlights-block show-up">
                      <div class="word-mask">
-                        <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Ville d'Agadir</h2>
+                        <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Votre Réservation Taxi à Agadir</h2>
                      </div>
                      <div class="rich-text-wrapper">
                         <div class="destinations-rich-text w-richtext">
-                           <p>Agadir, perle balnéaire du Maroc, charme les visiteurs avec ses plages dorées, son climat clément et son atmosphère décontractée.</p>
-                           <p>‍</p>
-                           <p>Agadir est une destination prisée pour le farniente, les sports nautiques et la découverte d'une culture berbère authentique.</p>
+                           <p>Agadir est une destination incontournable pour des plages dorées, un climat agréable et une atmosphère accueillante. Profitez de notre service de taxi à Agadir pour vos déplacements en toute sérénité.</p>
+                           <p>Notre service de réservation taxi Agadir offre des transferts fiables et confortables vers l'aéroport, les sites touristiques et autres destinations populaires.</p>
                         </div>
                      </div>
                   </div>
@@ -345,91 +341,70 @@
             <div class="container limit-container">
                <div class="w-layout-grid activities-grid">
                   <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
-                     <h2 class="h3 trip-h3">Activities</h2>
-                     <p class="paragraph activities">Baignez-vous sur les plages dorées et appréciez les sports nautiques vivifiants le long de la côte atlantique.</p>
+                     <h2 class="h3 trip-h3">Activités à Agadir</h2>
+                     <p class="paragraph activities">Explorez les plages, découvrez la cuisine marocaine et profitez des sites historiques et des sports nautiques grâce à nos taxis à Agadir.</p>
                   </div>
                   <div class="w-dyn-list">
                      <div role="list" class="activities-list-grid w-dyn-items">
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="Cuisine traditionnelle" class="icon smaller"></div>
                                  <div class="text-block dark-grey">Cuisine traditionnelle</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
                         </div>
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/agadiroufla.webp" loading="lazy" alt="agadir oufla" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/axe.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/axe.svg" loading="eager" alt="Sites archéologiques" class="icon smaller"></div>
                                  <div class="text-block dark-grey">Sites archéologiques</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
                         </div>
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/plageagadir.webp" loading="lazy" alt="plage d'essaouira" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Des plages</div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="Plages à Agadir" class="icon smaller"></div>
+                                 <div class="text-block dark-grey">Plages</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
                         </div>
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine marocaine" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/chef.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/chef.svg" loading="eager" alt="Cuisine marocaine" class="icon smaller"></div>
                                  <div class="text-block dark-grey">Cuisine marocaine</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
                         </div>
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/plageagadir.webp" loading="lazy" alt="plage d'essaouira" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/tree.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">La nature</div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/tree.svg" loading="eager" alt="Nature" class="icon smaller"></div>
+                                 <div class="text-block dark-grey">Nature</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
                         </div>
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/shopping.webp" loading="lazy" alt="magazin" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/bag.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Le Shopping</div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/bag.svg" loading="eager" alt="Shopping à Agadir" class="icon smaller"></div>
+                                 <div class="text-block dark-grey">Shopping</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
                         </div>
                         <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/active.webp" loading="lazy" alt="homme qui cour" sizes="100vw" srcset="/images/active_500.webp 500w, /images/active_800.webp 800w, /images/active_1080.webp 1080w" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/running.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Active</div>
+                           <div class="activity-block">
+                              <div class="activity">
+                                 <div class="icon-wrap dark"><img src="/images/running.svg" loading="eager" alt="Activités sportives" class="icon smaller"></div>
+                                 <div class="text-block dark-grey">Activités sportives</div>
                               </div>
                               <div class="horizontal-line underline"></div>
                            </div>
@@ -437,9 +412,10 @@
                      </div>
                   </div>
                </div>
+               <img src="/images/line.svg" loading="lazy" alt="Décoration" class="trip-iten-squiqqle">
             </div>
-            <img src="/images/line.svg" loading="lazy" alt="icon" class="trip-iten-squiqqle">
          </section>
+         
          <section class="section">
             <div class="container limit-container">
                <div id="tarif" class="w-layout-grid activities-grid set">
