--- a/public/agadir.html
+++ b/public/agadir.html
@@ -330,7 +330,7 @@
                      <div class="rich-text-wrapper">
                         <div class="destinations-rich-text w-richtext">
                            <p>Agadir est une destination incontournable pour des plages dorées, un climat agréable et une atmosphère accueillante. Profitez de notre service de taxi à Agadir pour vos déplacements en toute sérénité.</p>
-                           <p>Notre service de réservation taxi Agadir offre des transferts fiables et confortables vers l'aéroport, les sites touristiques et autres destinations populaires.</p>
+                           <p>Notre service de <strong>réservation taxi Agadir</strong> offre des transferts fiables et confortables vers <strong>l'aéroport</strong>, les sites touristiques et autres destinations populaires.</p>
                         </div>
                      </div>
                   </div>
