--- a/public/agadir.html
+++ b/public/agadir.html
@@ -307,114 +307,112 @@
          </section>
          <section class="section">
             <div id="apercu" class="container limit-container">
-               <div class="w-layout-grid trip-grid-iten">
-                  <div class="trip-details-block">
-                     <h1 class="h3 trip-h3 mobile-bottom-padding">Agadir Taxi - Réservation Taxi Agadir</h1>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Localisation</div>
-                        <div class="trip-info-text caps">Sur la côte atlantique du Maroc</div>
-                     </div>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Authenticité</div>
-                        <div class="trip-info-text caps">Fondée au début du XVIe siècle</div>
-                     </div>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Population</div>
-                        <div class="trip-info-text caps">421 844 habitants</div>
-                     </div>
-                  </div>
-                  <div class="trip-highlights-block show-up">
-                     <div class="word-mask">
-                        <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Votre Réservation Taxi à Agadir</h2>
-                     </div>
-                     <div class="rich-text-wrapper">
-                        <div class="destinations-rich-text w-richtext">
-                           <p>Agadir est une destination incontournable pour des plages dorées, un climat agréable et une atmosphère accueillante. Profitez de notre service de taxi à Agadir pour vos déplacements en toute sérénité.</p>
-                           <p>Notre service de <strong>réservation taxi Agadir</strong> offre des transferts fiables et confortables vers <strong>l'aéroport</strong>, les sites touristiques et autres destinations populaires.</p>
+                <div class="w-layout-grid trip-grid-iten">
+                    <div class="trip-details-block">
+                        <h1 class="h3 trip-h3 mobile-bottom-padding">Réservez un Taxi à Agadir pour Vos Transferts en Toute Confiance</h1>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Ville</div>
+                            <div class="trip-info-text caps">Agadir, Côte Atlantique</div>
                         </div>
-                     </div>
-                  </div>
-               </div>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Confort</div>
+                            <div class="trip-info-text caps">Des transferts fiables et confortables</div>
+                        </div>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Population</div>
+                            <div class="trip-info-text caps">421 844 habitants</div>
+                        </div>
+                    </div>
+                    <div class="trip-highlights-block show-up">
+                        <div class="word-mask">
+                            <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Agadir Taxi – Réservation Facile et Transferts Confortables</h2>
+                        </div>
+                        <div class="rich-text-wrapper">
+                            <div class="destinations-rich-text w-richtext">
+                                <p>Agadir, la perle balnéaire du Maroc, offre des plages dorées, un climat agréable et une expérience de voyage sans égal. Réservez facilement un taxi pour des transferts en toute confiance et profitez d'un confort optimal tout au long de votre séjour.</p>
+                                <p>Avec nos services de taxi à Agadir, découvrez une ville mêlant authenticité et modernité. Que ce soit pour des déplacements privés ou professionnels, nous assurons des trajets confortables et adaptés à vos besoins.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </section>
-         <section id="Activities" class="section light-bg-2">
+        </section>
+        <section id="Activities" class="section light-bg-2">
             <div class="container limit-container">
-               <div class="w-layout-grid activities-grid">
-                  <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
-                     <h2 class="h3 trip-h3">Activités à Agadir</h2>
-                     <p class="paragraph activities">Explorez les plages, découvrez la cuisine marocaine et profitez des sites historiques et des sports nautiques grâce à nos taxis à Agadir.</p>
-                  </div>
-                  <div class="w-dyn-list">
-                     <div role="list" class="activities-list-grid w-dyn-items">
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="Cuisine traditionnelle" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Cuisine traditionnelle</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
+                <div class="w-layout-grid activities-grid">
+                    <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
+                        <h2 class="h3 trip-h3">Activités à Découvrir</h2>
+                        <p class="paragraph activities">Profitez des plages dorées d'Agadir, essayez les sports nautiques vivifiants et explorez les trésors cachés de cette ville côtière fascinante.</p>
+                    </div>
+                    <div class="w-dyn-list">
+                        <div role="list" class="activities-list-grid w-dyn-items">
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine" class="act-photo"></div>
+                                </div>
+                                <div class="activity-block">
+                                    <div class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Cuisine traditionnelle</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/agadiroufla.webp" loading="lazy" alt="agadir oufla" class="act-photo"></div>
+                                </div>
+                                <div class="activity-block">
+                                    <div class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/axe.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Sites historiques</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/plageagadir.webp" loading="lazy" alt="plage agadir" class="act-photo"></div>
+                                </div>
+                                <div class="activity-block">
+                                    <div class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Détente sur les plages</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/shopping.webp" loading="lazy" alt="shopping agadir" class="act-photo"></div>
+                                </div>
+                                <div class="activity-block">
+                                    <div class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/bag.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Shopping local</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/active.webp" loading="lazy" alt="sports agadir" class="act-photo"></div>
+                                </div>
+                                <div class="activity-block">
+                                    <div class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/running.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Activités sportives</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
                         </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/axe.svg" loading="eager" alt="Sites archéologiques" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Sites archéologiques</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="Plages à Agadir" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Plages</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/chef.svg" loading="eager" alt="Cuisine marocaine" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Cuisine marocaine</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/tree.svg" loading="eager" alt="Nature" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Nature</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/bag.svg" loading="eager" alt="Shopping à Agadir" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Shopping</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div class="activity-block">
-                              <div class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/running.svg" loading="eager" alt="Activités sportives" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Activités sportives</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <img src="/images/line.svg" loading="lazy" alt="Décoration" class="trip-iten-squiqqle">
+                    </div>
+                </div>
+                <img src="/images/line.svg" loading="lazy" alt="décoration" class="trip-iten-squiqqle">
             </div>
-         </section>
+        </section>
+        
          
          <section class="section">
             <div class="container limit-container">
