--- a/public/agadir.html
+++ b/public/agadir.html
@@ -14,7 +14,7 @@
       <meta content="Agadir Taxi – Réservation Facile et Transferts Confortables" property="og:title">
       <meta content="/images/menulogo.webp" property="og:image">
       <meta content="Agadir Taxi – Réservation Facile et Transferts Confortables" property="twitter:title">
-      <meta name="description" lang="fr" content="Réservez un taxi à Agadir pour des transferts confortables vers l'aéroport et les destinations populaires. Profitez d'un service rapide et fiable avec chauffeurs expérimentés.">
+      <meta name="description" lang="fr" content="Réservez un taxi à Agadir pour des transferts confortables vers l'aéroport et les destinations populaires avec un service rapide et fiable.">
       <meta content="/images/menulogo.webp" property="twitter:image">
       <link href="/css/style.css" rel="stylesheet" type="text/css">
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document)</script>
