--- a/public/index.html
+++ b/public/index.html
@@ -1128,7 +1128,7 @@
       </section>
       <section id="faq" class="section">
         <div class="container limit-container">
-            <h2>Foire aux questions - Taxi Marrakech</h2>
+            <h2 class="h2 h2-center">Foire aux questions - Taxi Marrakech</h2>
           
             <div class="faq-item">
               <h3>Quels sont vos tarifs pour un transfert aéroport de Marrakech ?</h3>
