--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,54 @@
    <meta content="Taxi à Marrakech : réservation rapide, tarifs compétitifs pour transferts aéroport et toutes destinations. Réservez maintenant !"name=description lang=fr>
    <meta content="Taxi à Marrakech : réservation rapide, tarifs compétitifs pour transferts aéroport et toutes destinations. Réservez maintenant !"property=og:description>
    <meta content="Taxi à Marrakech : réservation rapide, tarifs compétitifs pour transferts aéroport et toutes destinations. Réservez maintenant !"name=twitter:description>
+   <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Quels sont vos tarifs pour un transfert aéroport de Marrakech ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nos tarifs débutent à partir de 15 euros pour les transferts depuis l’aéroport de Marrakech vers différents quartiers ou villes. Les prix varient selon la destination."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Puis-je réserver un taxi à l'avance ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Oui, vous pouvez réserver votre taxi en ligne à l’avance en précisant la date, l’heure et le lieu de prise en charge."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Vos chauffeurs parlent-ils anglais ou français ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Oui, nos chauffeurs parlent le français et certains parlent aussi l’anglais pour faciliter votre trajet."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Quels types de véhicules utilisez-vous ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nous disposons de voitures confortables, climatisées, bien entretenues, idéales pour les particuliers, les couples ou les groupes."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Est-ce que vous proposez des trajets vers Essaouira, Casablanca, Agadir ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Oui, nous proposons des transferts longue distance depuis Marrakech vers d'autres villes comme Essaouira, Casablanca, Agadir, Ouarzazate, etc."
+          }
+        }
+      ]
+    }
+    </script>    
    <link href=/css/style.css rel=stylesheet>
    <script>!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document)</script>
    <link href=/images/favicon.ico rel="shortcut icon"type=image/x-icon>
