modify the files

--- a/public/index.html
+++ b/public/index.html
@@ -730,6 +730,7 @@
             <a href="https://360tour.ma/" style="margin-left: 1rem;" target="_blank">Créer par 360Tour</a>
         </div>
       </footer>
+<div id="whatsapp"> <a href="https://wa.me/+212630960389" target="_blank"> <p>Vous avez des questions?<br>Écrivez-nous!</p> <img src="/images/whatsapp.svg" height="40px" width="40px" alt="icon"> </a> </div>
       
     <script src="./main.js"></script>
 </body>
