modify the files

--- a/public/propos.html
+++ b/public/propos.html
@@ -13,6 +13,7 @@
   <meta content="À propos | taxistomarrakech" property="twitter:title">
   <meta content="/images/menulogo.webp" property="twitter:image">
   <link rel="icon" type="image/png" href="/images/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
   <meta content="Réservez un service de taxi fiable pour des transferts sans tracas entre Marrakech et Essaouira. Explorez les meilleures options de taxi au Maroc avec nous !" name="description" lang="fr">
   <meta content="Réservez un service de taxi fiable pour des transferts sans tracas entre Marrakech et Essaouira. Explorez les meilleures options de taxi au Maroc avec nous !" property="og:description">
   <meta content="Réservez un service de taxi fiable pour des transferts sans tracas entre Marrakech et Essaouira. Explorez les meilleures options de taxi au Maroc avec nous !" name="twitter:description">
