modify the files

--- a/public/taxi-marrakech-aeroport-palmeraie.html
+++ b/public/taxi-marrakech-aeroport-palmeraie.html
@@ -8,18 +8,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Réservez votre taxi à Marrakech facilement au meilleur prix. Service fiable 24/7 pour vos trajets. Taxi Marrakech pour réservations rapides et confort assuré.">
-    <meta content="Réservez votre taxi à Marrakech facilement au meilleur prix. Service fiable 24/7 pour vos trajets. Taxi Marrakech pour réservations rapides et confort assuré." property="og:description">
-    <meta content="Réservez votre taxi à Marrakech facilement au meilleur prix. Service fiable 24/7 pour vos trajets. Taxi Marrakech pour réservations rapides et confort assuré." property="twitter:description">
-    <meta content="Taxi Marrakech – Réservation Facile au Meilleur Prix | 24/7" property="twitter:title">
-    <meta content="Taxi Marrakech – Réservation Facile au Meilleur Prix | 24/7" property="og:title">
+    <meta name="description" content="Réservez votre taxi de l’aéroport de Marrakech Menara à la Palmeraie. Service rapide, fiable et confortable. Tarifs attractifs, réservation en ligne simple.">
+    <meta content="Réservez votre taxi de l’aéroport de Marrakech Menara à la Palmeraie. Service rapide, fiable et confortable. Tarifs attractifs, réservation en ligne simple." property="og:description">
+    <meta content="Réservez votre taxi de l’aéroport de Marrakech Menara à la Palmeraie. Service rapide, fiable et confortable. Tarifs attractifs, réservation en ligne simple." property="twitter:description">
+    <meta content="Taxi Marrakech Aéroport vers Palmeraie | Réservation" property="twitter:title">
+    <meta content="Taxi Marrakech Aéroport vers Palmeraie | Réservation" property="og:title">
     <meta property="og:image" content="/images/menulogo.webp">
     <meta name="twitter:image" content="/images/menulogo.webp">
     <link rel="icon" type="image/png" href="/images/favicon.ico">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/activities.css">
     <link rel="stylesheet" href="/css/mainBigScreen.css" media="screen and (min-width: 990px)">
-    <title>Taxi Marrakech – Réservation Facile au Meilleur Prix | 24/7</title>
+    <title>Taxi Marrakech Aéroport vers Palmeraie | Réservation</title>
 </head>
 <body>
   <noscript><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-ND4CTK2S" style="display:none;visibility:hidden" width="0"></iframe></noscript>
@@ -89,11 +89,11 @@
                         <a class="small-text" href="/destination.html">RETOUR À LA PAGE DESTINATION</a>
                     </div>
                     <div>
-                      <h1 class="big-heading blur-animation">Taxi Marrakech – Réservation Facile, Meilleur Prix</h1>
+                      <h1 class="big-heading blur-animation">Taxi Marrakech Aéroport Menara vers la Palmeraie</h1>
                   </div>
                   <div class="added-infos">
+                      <p class="added-btn">Palmeaie</p>
                       <p class="added-btn">Marrakech</p>
-                      <p class="added-btn">Centre-sud du maroc</p>
                   </div>
                   <div>
                       <a href="/contact.html" class="btn hover-btn">RESERVER VOTRE TAXI</a>
