modify the files

--- a/public/taxi-marrakech-aeroport-palmeraie.html
+++ b/public/taxi-marrakech-aeroport-palmeraie.html
@@ -114,15 +114,15 @@
       <div class="activity-time">
           <div>
               <h2>DESTINATION</h2>
-              <p>Marrakech</p>
+              <p>Les Palmeraie</p>
           </div>
           <div>
               <h2>SITUEE AU</h2>
-              <p>Centre-sud du maroc</p>
+              <p>Marrakech</p>
           </div>
       </div>
         <div class="main-activity-img">
-          <img src="/images/marrakech-main.jpg" alt="les Jardins de menara" srcset="/images/marrakech-main_550.jpg 550w, /images/marrakech-main_650.jpg 650w, /images/marrakech-main_800.jpg 800w, /images/marrakech-main_950.jpg 950w, /images/marrakech-main_1080.jpg 1080w, /images/marrakech-main_1250.jpg 1250w, /images/marrakech-main.jpg 1450w">
+          <img src="/images/palmeraie-main.webp" alt="les Palmeraies" srcset="/images/palmeraie-main_550.webp 550w, /images/palmeraie-main_650.webp 650w, /images/palmeraie-main_800.webp 800w, /images/palmeraie-main_950.webp 950w, /images/palmeraie-main_1080.webp 1080w, /images/palmeraie-main_1250.webp 1250w, /images/palmeraie-main.webp 1450w">
         </div>
         <div class="additionnal-infos">
           <h2>ACTIVITE À DECOUVRIR AVEC UN TAXI À MARRAKECH </h2>
