--- a/public/taxi-marrakech-aeroport-palmeraie.html
+++ b/public/taxi-marrakech-aeroport-palmeraie.html
@@ -92,7 +92,7 @@
                       <h1 class="big-heading blur-animation">Taxi Marrakech Aéroport Menara vers la Palmeraie</h1>
                   </div>
                   <div class="added-infos">
-                      <p class="added-btn">Palmeaie</p>
+                      <p class="added-btn">Palmeraie</p>
                       <p class="added-btn">Marrakech</p>
                   </div>
                   <div>
@@ -106,11 +106,11 @@
       <div class="dashed-line" ></div>
       <section class="activity-main-content">
         <div class="activity-description">
-          <p>Marrakech, joyau du Maroc, fascine par sa médina animée, ses souks colorés et ses palais somptueux. Pour une expérience sans tracas, optez pour un taxi à Marrakech pour vos déplacements, visites et transferts depuis l’aéroport.</p>
-          <p>Réservez facilement votre taxi Marrakech pour un transport confortable et rapide à travers la ville. Explorez la Ville Rouge où les traditions ancestrales rencontrent l'effervescence contemporaine.</p>
-          <p>Assurez-vous de réserver un taxi à Marrakech pour profiter pleinement de votre séjour, avec un transport fiable et au meilleur prix.</p>
-          <p>Plongez dans la magie de la médina, visitez des palais somptueux, déambulez dans les souks aux senteurs enivrantes, et profitez des jardins luxuriants. Réservez un taxi à Marrakech pour explorer ces lieux facilement et sans souci. Vous pourrez découvrir la Ville Rouge dans tout son éclat grâce à un transport rapide et confortable.</p>
-      </div>
+            <p>La Palmeraie de Marrakech, véritable oasis de tranquillité aux portes de la Ville Rouge, séduit par ses paysages verdoyants et ses hôtels de prestige. Pour rejoindre ce cadre unique sans stress, optez pour un taxi depuis l’aéroport de Marrakech Menara vers la Palmeraie.</p>
+            <p>Réservez facilement votre taxi Marrakech aéroport pour un transfert rapide, confortable et sécurisé vers la Palmeraie. Que vous arriviez pour un séjour en famille, un voyage d’affaires ou une escapade romantique, profitez d’un service fiable et ponctuel.</p>
+            <p>Avec un taxi Marrakech Palmeraie, vous bénéficiez d’un transport direct, sans attente ni complications, au meilleur prix. C’est la solution idéale pour commencer votre séjour en toute sérénité.</p>
+            <p>Dès votre arrivée à l’aéroport, votre chauffeur vous conduit directement vers la Palmeraie, célèbre pour ses resorts luxueux, ses villas, ses golfs et ses paysages emblématiques de palmiers. Optez pour la réservation en ligne de votre taxi Marrakech aéroport Palmeraie et profitez d’un trajet pratique et confortable.</p>
+        </div>          
       <div class="activity-time">
           <div>
               <h2>DESTINATION</h2>
@@ -125,18 +125,18 @@
           <img src="/images/palmeraie-main.webp" alt="les Palmeraies" srcset="/images/palmeraie-main_550.webp 550w, /images/palmeraie-main_650.webp 650w, /images/palmeraie-main_800.webp 800w, /images/palmeraie-main_950.webp 950w, /images/palmeraie-main_1080.webp 1080w, /images/palmeraie-main_1250.webp 1250w, /images/palmeraie-main.webp 1450w">
         </div>
         <div class="additionnal-infos">
-          <h2>ACTIVITE À DECOUVRIR AVEC UN TAXI À MARRAKECH </h2>
-          <ul>
-              <li>Cuisine Traditionnelle</li>
-              <li>Sites Archéologiques</li>
-              <li>Shopping dans les Souks</li>
-              <li>Activités en Plein Air</li>
-          </ul>
-      </div>
-      <div class="additionnal-infos-two">
-          <h2>PLUS</h2>
-          <p>Plongez dans la magie de la médina, visitez des palais somptueux, déambulez dans les souks aux senteurs enivrantes, et profitez des jardins luxuriants. Réservez un taxi à Marrakech pour explorer ces lieux facilement et sans souci. Vous pourrez découvrir la Ville Rouge dans tout son éclat grâce à un transport rapide et confortable.</p>
-      </div>
+            <h2>ACTIVITÉS À DÉCOUVRIR DANS LA PALMERAIE</h2>
+            <ul>
+              <li>Balades à dos de chameau ou en quad</li>
+              <li>Golfs et complexes de loisirs</li>
+              <li>Séjours dans des resorts et villas de luxe</li>
+              <li>Moments de détente dans les spas et hammams</li>
+            </ul>
+          </div>
+          <div class="additionnal-infos-two">
+            <h2>PLUS</h2>
+            <p>Située à seulement quelques kilomètres de l’aéroport de Marrakech, la Palmeraie est un lieu unique où calme et nature se mêlent au raffinement. Réservez votre taxi Marrakech aéroport Palmeraie pour rejoindre facilement vos hôtels, villas ou centres de loisirs. Profitez d’un transport confortable et rapide pour découvrir cette oasis verdoyante en toute sérénité.</p>
+          </div>          
       </section>
       <section class="testimonial">
         <div class="testimonial-container">
