modify the files

--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -367,6 +367,6 @@
       </div>
     </footer>
 <div id="whatsapp"> <a href="https://wa.me/+212630960389" target="_blank"> <p>Vous avez des questions?<br>Écrivez-nous!</p> <img src="/images/whatsapp.svg" height="40px" width="40px" alt="icon"> </a> </div>
-    <script src="/common.js"></script>
+    <script src="/js/common.js"></script>
 </body>
 </html>
