--- a/public/contact.html
+++ b/public/contact.html
@@ -461,7 +461,7 @@
     </footer>
 <div id="whatsapp"> <a href="https://wa.me/+212630960389" target="_blank"> <p>Vous avez des questions?<br>Écrivez-nous!</p> <img src="/images/whatsapp.svg" height="40px" width="40px" alt="icon"> </a> </div>
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-      <script src="/form.js">  </script> 
-      <script src="/common.js"></script>
+      <script src="/js/form.js">  </script> 
+      <script src="/js/common.js"></script>
 </body>
 </html>
