--- a/public/taxi-marrakech-essaouira.html
+++ b/public/taxi-marrakech-essaouira.html
@@ -92,8 +92,8 @@
                       <h1 class="big-heading blur-animation">Taxi Marrakech vers Essaouira – Transfert Privé et Confortable</h1>
                   </div>
                   <div class="added-infos">
-                      <p class="added-btn">Palmeraie</p>
                       <p class="added-btn">Marrakech</p>
+                      <p class="added-btn">Essaouira</p>
                   </div>
                   <div>
                       <a href="/contact.html" class="btn hover-btn">RESERVER VOTRE TAXI</a>
@@ -106,37 +106,40 @@
       <div class="dashed-line" ></div>
       <section class="activity-main-content">
         <div class="activity-description">
-            <p>La Palmeraie de Marrakech, véritable oasis de tranquillité aux portes de la Ville Rouge, séduit par ses paysages verdoyants et ses hôtels de prestige. Pour rejoindre ce cadre unique sans stress, optez pour un taxi depuis l’aéroport de Marrakech Menara vers la Palmeraie.</p>
-            <p>Réservez facilement votre taxi Marrakech aéroport pour un transfert rapide, confortable et sécurisé vers la Palmeraie. Que vous arriviez pour un séjour en famille, un voyage d’affaires ou une escapade romantique, profitez d’un service fiable et ponctuel.</p>
-            <p>Avec un taxi Marrakech Palmeraie, vous bénéficiez d’un transport direct, sans attente ni complications, au meilleur prix. C’est la solution idéale pour commencer votre séjour en toute sérénité.</p>
-            <p>Dès votre arrivée à l’aéroport, votre chauffeur vous conduit directement vers la Palmeraie, célèbre pour ses resorts luxueux, ses villas, ses golfs et ses paysages emblématiques de palmiers. Optez pour la réservation en ligne de votre taxi Marrakech aéroport Palmeraie et profitez d’un trajet pratique et confortable.</p>
-        </div>          
+            <p>Essaouira, perle de l’Atlantique, séduit par son port animé, sa médina fortifiée et ses plages infinies. Pour rejoindre cette ville emblématique en toute tranquillité, choisissez un taxi depuis Marrakech vers Essaouira.</p>
+            <p>Réservez facilement votre taxi Marrakech Essaouira pour un transfert direct, confortable et sécurisé. Que ce soit pour un séjour en famille, un voyage culturel ou une escapade romantique, profitez d’un service fiable et ponctuel qui vous conduit sans stress jusqu’à votre destination.</p>
+            <p>Avec un taxi privé Marrakech Essaouira, vous bénéficiez d’un transport sans tracas, au meilleur prix, et adapté à vos besoins. C’est la solution idéale pour voyager en toute sérénité le long de la côte atlantique et admirer les paysages magnifiques entre l’Atlas et l’océan.</p>
+            <p>Dès votre départ de Marrakech, votre chauffeur vous conduit directement vers Essaouira, réputée pour ses ruelles pittoresques, ses remparts historiques, son artisanat local et son atmosphère bohème. Optez pour la réservation en ligne de votre taxi Marrakech Essaouira et profitez d’un trajet agréable, climatisé et confortable.</p>
+            <p>Nos chauffeurs professionnels vous garantissent un service de qualité, avec ponctualité, sécurité et accueil chaleureux. Grâce à votre taxi Marrakech Essaouira, découvrez cette ville portuaire unique et commencez votre séjour en toute sérénité.</p>
+          </div>                    
       <div class="activity-time">
           <div>
               <h2>DESTINATION</h2>
-              <p>Les Palmeraie</p>
+              <p>Essaouira</p>
           </div>
           <div>
               <h2>SITUEE AU</h2>
-              <p>Marrakech</p>
+              <p>Sud-ouest de la région de Marrakech-Safi</p>
           </div>
       </div>
         <div class="main-activity-img">
-          <img src="/images/palmeraie-main.webp" alt="les Palmeraies" srcset="/images/palmeraie-main_550.webp 550w, /images/palmeraie-main_650.webp 650w, /images/palmeraie-main_800.webp 800w, /images/palmeraie-main_950.webp 950w, /images/palmeraie-main_1080.webp 1080w, /images/palmeraie-main_1250.webp 1250w, /images/palmeraie-main.webp 1450w">
+            <img src="/images/essaouira-main.jpg" alt="Port d'Essaouira" srcset="/images/essaouira-main_550.jpg 550w, /images/essaouira-main_650.jpg 650w, /images/essaouira-main_800.jpg 800w, /images/essaouira-main_950.jpg 950w, /images/essaouira-main_1080.jpg 1080w, /images/essaouira-main_1250.jpg 1250w, /images/essaouira-main.jpg 1450w">
         </div>
         <div class="additionnal-infos">
-            <h2>ACTIVITÉS À DÉCOUVRIR DANS LA PALMERAIE</h2>
+            <h2>ACTIVITÉS À DÉCOUVRIR À ESSAOUIRA</h2>
             <ul>
-              <li>Balades à dos de chameau ou en quad</li>
-              <li>Golfs et complexes de loisirs</li>
-              <li>Séjours dans des resorts et villas de luxe</li>
-              <li>Moments de détente dans les spas et hammams</li>
+              <li>Découverte de la médina classée à l’UNESCO</li>
+              <li>Balade sur les plages et activités nautiques (surf, kitesurf)</li>
+              <li>Visite des remparts et du port de pêche traditionnel</li>
+              <li>Shopping artisanal : bois de thuya, bijoux, textiles et épices</li>
             </ul>
           </div>
+          
           <div class="additionnal-infos-two">
             <h2>PLUS</h2>
-            <p>Située à seulement quelques kilomètres de l’aéroport de Marrakech, la Palmeraie est un lieu unique où calme et nature se mêlent au raffinement. Réservez votre taxi Marrakech aéroport Palmeraie pour rejoindre facilement vos hôtels, villas ou centres de loisirs. Profitez d’un transport confortable et rapide pour découvrir cette oasis verdoyante en toute sérénité.</p>
-          </div>          
+            <p>Essaouira est une ville côtière pleine de charme, réputée pour son atmosphère bohème et sa douceur de vivre. Ses remparts historiques, son port animé et ses plages balayées par les alizés en font une destination incontournable au Maroc. Avec un taxi Marrakech Essaouira, profitez d’un trajet simple et confortable pour explorer cette perle de l’Atlantique.</p>
+          </div>
+                   
       </section>
       <section class="testimonial">
         <div class="testimonial-container">
