modify the files

--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -158,7 +158,7 @@
                <td>120€</td>
                <td>5 &gt; 8 Pers</td>
                <td>140€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Casablanca &gt; Agadir</td>
@@ -166,7 +166,7 @@
                <td>230€</td>
                <td>5 &gt; 8 Pers</td>
                <td>280€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Casablanca &gt; Essaouira</td>
@@ -174,7 +174,7 @@
                <td>150€</td>
                <td>5 &gt; 8 Pers</td>
                <td>180€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Casablanca &gt; Casa aéroport</td>
@@ -182,7 +182,7 @@
                <td>30€</td>
                <td>5 &gt; 8 Pers</td>
                <td>45€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Casablanca &gt; Rabat</td>
@@ -190,7 +190,7 @@
                <td>110€</td>
                <td>5 &gt; 8 Pers</td>
                <td>130€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Casablanca &gt; Imsouane</td>
@@ -198,7 +198,7 @@
                <td>250€</td>
                <td>5 &gt; 8 Pers</td>
                <td>320€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Casablanca &gt; Taroudant</td>
@@ -206,7 +206,7 @@
                <td>300€</td>
                <td>5 &gt; 8 Pers</td>
                <td>340€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
          </tbody></table>
         </div>
