--- a/public/taxi-marrakech-aeroport-palmeraie.html
+++ b/public/taxi-marrakech-aeroport-palmeraie.html
@@ -137,7 +137,43 @@
             <h2>PLUS</h2>
             <p>Située à seulement quelques kilomètres de l’aéroport de Marrakech, la Palmeraie est un lieu unique où calme et nature se mêlent au raffinement. Réservez votre taxi Marrakech aéroport Palmeraie pour rejoindre facilement vos hôtels, villas ou centres de loisirs. Profitez d’un transport confortable et rapide pour découvrir cette oasis verdoyante en toute sérénité.</p>
           </div>          
-      </section> 
+      </section>
+      <section class="testimonial">
+        <div class="testimonial-container">
+            <h5 class="big-heading" style="filter: none; opacity: 1;color: #081c2b;">Nos Tarifs</h5>
+            <p style="color: #081c2b;">Consultez nos tarifs et réservez votre taxi dès maintenant</p> 
+        </div>
+        <div class="testimonial-cards-container" style="width: 95%;">
+          <table>
+            <tbody>
+               <tr>
+                  <th>Trajet</th>
+                  <th>Personnes</th>
+                  <th>Prix</th>
+                  <th>Personnes</th>
+                  <th>Prix</th>
+                  <th>Réservation</th>
+               </tr>  
+               <tr>
+                  <td>Marrakech city &gt; Aéroport</td>
+                  <td>1 &gt; 4 Pers</td>
+                  <td>15€</td>
+                  <td>5 &gt; 8 Pers</td>
+                  <td>20€</td>
+                  <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
+               </tr>
+               <tr>
+                  <td>Marrakech aéroport &gt; Palmeraie marrakech</td>
+                  <td>1 &gt; 4 Pers</td>
+                  <td>25€</td>
+                  <td>5 &gt; 8 Pers</td>
+                  <td>30€</td>
+                  <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
+               </tr>  
+            </tbody>
+         </table>
+        </div>
+      </section>
       <section class="tours" aria-labelledby="our Tours">
         <div class="tours-section-container">
             <div class="tours-section-title">
