--- a/public/agadir.html
+++ b/public/agadir.html
@@ -159,7 +159,7 @@
                <td>15€</td>
                <td>5 &gt; 8 Pers</td>
                <td>30€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Agadir &gt; Taghazout</td>
@@ -167,7 +167,7 @@
                <td>30€</td>
                <td>5 &gt; 8 Pers</td>
                <td>40€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Agadir &gt; Marrakech</td>
@@ -175,7 +175,7 @@
                <td>100€</td>
                <td>5 &gt; 8 Pers</td>
                <td>120€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Agadir &gt; Essaouira</td>
@@ -183,7 +183,7 @@
                <td>70€</td>
                <td>5 &gt; 8 Pers</td>
                <td>80€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Agadir &gt; Casablanca</td>
@@ -191,7 +191,7 @@
                <td>250€</td>
                <td>5 &gt; 8 Pers</td>
                <td>300€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Agadir &gt; Taroudant</td>
@@ -199,7 +199,7 @@
                <td>70€</td>
                <td>5 &gt; 8 Pers</td>
                <td>80€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
          </tbody></table>
         </div>
