--- a/public/taghazout.html
+++ b/public/taghazout.html
@@ -159,7 +159,7 @@
                <td>70€</td>
                <td>5 &gt; 8 Pers</td>
                <td>80€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Taghazout &gt; Marrakech</td>
@@ -167,7 +167,7 @@
                <td>130€</td>
                <td>5 &gt; 8 Pers</td>
                <td>150€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
             <tr>
                <td>Marrakech &gt; Taghazout</td>
@@ -175,7 +175,7 @@
                <td>120€</td>
                <td>5 &gt; 8 Pers</td>
                <td>130€</td>
-               <td><a href="/contact">Réservez votre taxi</a></td>
+               <td><a href="/contact#reservation-form">Réservez votre taxi</a></td>
             </tr>
          </tbody></table>
         </div>
