modify the files

--- a/public/taxi-agadir-aeroport-agadir.html
+++ b/public/taxi-agadir-aeroport-agadir.html
@@ -89,7 +89,7 @@
                         <a class="small-text" href="/destination.html">RETOUR À LA PAGE DESTINATION</a>
                     </div>
                     <div>
-                        <h1 class="big-heading blur-animation">Taxi Agadir Aéroport vers Agadir City – Transfert Confortable et Sécurisé</h1>
+                        <h1 class="big-heading blur-animation">Taxi Agadir Aéroport vers Agadir City</h1>
                     </div>
                     <div class="added-infos">
                       <p class="added-btn">Agadir</p>
